fixed nope spacing

--- a/stylesheets/nope.css
+++ b/stylesheets/nope.css
@@ -39,6 +39,9 @@ ul {
   font-family: Tahoma, Verdana, Segoe, sans-serif;
   border-color: darkblue;
   border-radius: 5px;
+  padding-left: 25px;
+  padding-right: 20px;
+  word-wrap: break-word;
 }
 
 #suggestions {
